--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "v1",
   "version": "1.0.0",
-  "description": "YelpCamp v1",
+  "description": "YelpCamp v5",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-	  "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+	"start": "node app.js"
   },
   "author": "zihan wang",
   "license": "ISC",
