--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "async": "^3.1.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.15.0",
     "connect-flash": "^0.1.1",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
